<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/note_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/note_header"
        android:textSize="@dimen/header_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Title: " />

        <EditText
            android:id="@+id/note_title"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/note_ver_ts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:text="@string/ts_ver_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/note_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_margin"
            android:text="@string/button_save"/>
        <Button
            android:id="@+id/note_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:text="@string/button_cancel"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:text="@string/input_note_text"/>

    <EditText
        android:id="@+id/note_body"
        android:background="@color/colorNote1"
        android:layout_margin="@dimen/common_margin"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>